--- a/package.json
+++ b/package.json
@@ -2,26 +2,48 @@
   "name": "ledyer-payments-for-woocommerce",
   "version": "1.0.0",
   "description": "Ledyer Payments for WooCommerce",
+  "type": "module",
   "scripts": {
     "preinstall": "npx only-allow pnpm",
-    "lint": "pnpx wp-prettier src/assets/js --paren-spacing --tab-width 4 --print-width 120 --no-semi --write",
-    "makepot": "pnpx grunt makepot",
-    "cssmin": "pnpx grunt cssmin",
-    "jsmin": "pnpx webpack",
-    "build": "pnpm makepot && pnpm cssmin && pnpm lint &&pnpm jsmin"
+    "lint": "npx wp-prettier src/assets/js --paren-spacing --tab-width 4 --print-width 120 --no-semi --write",
+    "makepot": "pnpm grunt makepot",
+    "cssmin": "pnpm grunt cssmin",
+    "jsmin": "pnpm webpack",
+    "build": "pnpm makepot && pnpm cssmin && pnpm lint && pnpm jsmin && pnpm buildblock",
+    "buildblock": "npx wp-scripts build",
+    "start:webpack": "wp-scripts start",
+    "dev": "pnpm run start:webpack"
   },
   "keywords": [],
   "author": "Krokedil",
   "license": "ISC",
   "devDependencies": {
+    "@types/react": "^18.3.12",
+    "@types/wordpress__blocks": "^12.5.14",
+    "@woocommerce/dependency-extraction-webpack-plugin": "^3.0.0",
+    "@wordpress/api-fetch": "^6.55.0",
+    "@wordpress/blocks": "^12.35.0",
+    "@wordpress/data": "^9.28.0",
+    "@wordpress/element": "^5.35.0",
     "@wordpress/eslint-plugin": "^20.1.0",
+    "@wordpress/html-entities": "^3.58.0",
+    "@wordpress/scripts": "^26.19.0",
+    "babel-loader": "^9.2.1",
+    "css-loader": "^6.11.0",
+    "glob": "^10.4.5",
     "grunt": "^1.6.1",
     "grunt-contrib-cssmin": "^5.0.0",
     "grunt-contrib-uglify": "^5.2.2",
     "grunt-wp-i18n": "^1.0.3",
     "prettier": "npm:wp-prettier@^3.0.3",
+    "react": "^18.3.1",
+    "sass-loader": "^13.3.3",
+    "style-loader": "^3.3.4",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.5.4",
     "webpack": "^5.93.0",
     "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.2",
     "wp-prettier": "^3.0.3"
   }
 }
